--- a/drone-api-server/package.json
+++ b/drone-api-server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "drone-api",
   "version": "1.0.0",
-  "main": "api/index.js",
+  "main": "api/server.js",
   "scripts": {
     "start": "node api/server.js"
   },
